--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,8 +1,8 @@
 :root {
     --fontSystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
     --black: #121;
-    --bgcColor: #b9eee6;
-    --txtColor: #430e16;
+    --cruise: #b9eee6;
+    --heath: #430e16;
     --white: #fff;
     --impureWhite: #c4d1e8;
     --twitterColor: #00ACEE;
