--- a/css/styles.css
+++ b/css/styles.css
@@ -1011,8 +1011,32 @@ template {
 
 .bg-pink9 { background-color: #180511 }
 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+  line-height: 1.5;
+
+  background-color: #b9eee6;
+}
+
+.container {
+  max-width: 70rem;
+  margin: 0 auto;
+}
+
+.txt-color {
+  color: var(--txtColor);
+}
+
+.title-size {
+  font-size: 10rem;
+}
+
 .btn-share {
-  font-size: 1.13rem;
+  font-size: 1rem;
 
   padding: 1.25rem;
 
