--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -2,6 +2,7 @@
     --fontSystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
     --black: #121;
     --cruise: #b9eee6;
+    --cruise2: #def7f2;
     --heath: #430e16;
     --white: #fff;
     --impureWhite: #c4d1e8;
