--- a/css/styles.css
+++ b/css/styles.css
@@ -498,7 +498,7 @@ body {
 }
 
 .txt-color {
-  color: var(--txtColor);
+  color: #430e16;
 }
 
 .title-size {
@@ -516,6 +516,14 @@ canvas {
 
 .whs-nw {
   white-space: nowrap;
+}
+
+.textdecoration-u {
+  text-decoration: underline;
+}
+
+.textd-n {
+  text-decoration: none;
 }
 
 .btn-share {
@@ -576,10 +584,6 @@ canvas {
   width: 100%;
 }
 
-.font-w8 {
-  font-weight: 800;
-}
-
 .black {
   color: #463c3e;
 }
@@ -598,6 +602,14 @@ canvas {
 
 .heath {
   color: #430e16;
+}
+
+.red9 {
+  color: #71585c;
+}
+
+.green9 {
+  color: #5d7259;
 }
 
 .display-ib {
@@ -666,8 +678,24 @@ canvas {
   padding-bottom: 1rem;
 }
 
+.padding-1 {
+  padding: 1rem;
+}
+
+.padding-2 {
+  padding: 2rem;
+}
+
 .border-b {
   border-bottom: 1px solid #463c3e;
+}
+
+.border1 {
+  border: 1px solid;
+}
+
+.borderc-black {
+  border-color: #463c3e;
 }
 
 
