--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -12,4 +12,10 @@
     --black: #463c3e;
     --red9: #71585c;
     --green9: #5d7259;
+    --pp: #0080B8;
+    --psoe: #CE1A23;
+    --zec: #9A1622;
+    --ciudadanos: #D64224;
+    --chunta: #EFB027;
 }
+
