--- a/src/css/_border.css
+++ b/src/css/_border.css
@@ -9,3 +9,27 @@
 .borderc-black {
   border-color: var(--black);
 }
+
+.border-l5 {
+  border-left: 5px solid;
+}
+
+.borderc-pp {
+  border-color: var(--pp);
+}
+
+.borderc-psoe {
+  border-color: var(--psoe);
+}
+
+.borderc-cs {
+  border-color: var(--ciudadanos);
+}
+
+.borderc-ch {
+  border-color: var(--chunta);
+}
+
+.borderc-zec {
+  border-color: var(--zec);
+}
