--- a/css/styles.css
+++ b/css/styles.css
@@ -1,738 +1,1 @@
-/*
-  Base CSS por Jorge Aznar
-  http://jorgeatgu.com
-  Estructura básica para iniciar cualquier proyecto con postCSS
-*/
-
-/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
-
-/* Document
-   ========================================================================== */
-
-/**
- * 1. Change the default font family in all browsers (opinionated).
- * 2. Correct the line height in all browsers.
- * 3. Prevent adjustments of font size after orientation changes in
- *    IE on Windows Phone and in iOS.
- */
-
-html {
-  font-family: sans-serif; /* 1 */
-  line-height: 1.15; /* 2 */
-
-  -ms-text-size-adjust: 100%; /* 3 */
-  -webkit-text-size-adjust: 100%; /* 3 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers (opinionated).
- */
-
-body {
-  margin: 0;
-}
-
-/**
- * Add the correct display in IE 9-.
- */
-
-article,
-aside,
-footer,
-header,
-nav,
-section {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 9-.
- * 1. Add the correct display in IE.
- */
-
-figcaption,
-figure,
-main { /* 1 */
-  display: block;
-}
-
-/**
- * Add the correct margin in IE 8.
- */
-
-figure {
-  margin: 1em 2.5rem;
-}
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  overflow: visible; /* 2 */
-
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * 1. Remove the gray background on active links in IE 10.
- * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
- */
-
-a {
-  background-color: transparent; /* 1 */
-
-  -webkit-text-decoration-skip: objects; /* 2 */
-}
-
-/**
- * Remove the outline on focused links when they are also active or hovered
- * in all browsers (opinionated).
- */
-
-a:active,
-a:hover {
-  outline-width: 0;
-}
-
-/**
- * 1. Remove the bottom border in Firefox 39-.
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-
-  border-bottom: none; /* 1 */
-}
-
-/**
- * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
- */
-
-b,
-strong {
-  font-weight: inherit;
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font style in Android 4.3-.
- */
-
-dfn {
-  font-style: italic;
-}
-
-/**
- * Add the correct background and color in IE 9-.
- */
-
-mark {
-  color: #000;
-  background-color: #ff0;
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-
-  position: relative;
-
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 9-.
- */
-
-audio,
-video {
-  display: inline-block;
-}
-
-/**
- * Add the correct display in iOS 4-7.
- */
-
-audio:not([controls]) {
-  display: none;
-
-  height: 0;
-}
-
-/**
- * Remove the border on images inside links in IE 10-.
- */
-
-img {
-  border-style: none;
-}
-
-/**
- * Hide the overflow in IE.
- */
-
-svg:not(:root) {
-  overflow: hidden;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers (opinionated).
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: sans-serif; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
- *    controls in Android 4.
- * 2. Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-html [type="button"], /* 1 */
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button; /* 2 */
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  padding: 0;
-
-  border-style: none;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Change the border, margin, and padding in all browsers (opinionated).
- */
-
-fieldset {
-  margin: 0 0.13rem;
-  padding: 0.35em 0.625em 0.75em;
-
-  border: 1px solid #c0c0c0;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  display: table; /* 1 */
-
-  box-sizing: border-box; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-
-  white-space: normal; /* 1 */
-
-  color: inherit; /* 2 */
-}
-
-/**
- * 1. Add the correct display in IE 9-.
- * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  display: inline-block; /* 1 */
-
-  vertical-align: baseline; /* 2 */
-}
-
-/**
- * Remove the default vertical scrollbar in IE.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10-.
- * 2. Remove the padding in IE 10-.
- */
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  outline-offset: -2px; /* 2 */
-
-  -webkit-appearance: textfield; /* 1 */
-}
-
-/**
- * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  font: inherit; /* 2 */
-
-  -webkit-appearance: button; /* 1 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in IE 9-.
- * 1. Add the correct display in Edge, IE, and Firefox.
- */
-
-details, /* 1 */
-menu {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Scripting
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 9-.
- */
-
-canvas {
-  display: inline-block;
-}
-
-/**
- * Add the correct display in IE.
- */
-
-template {
-  display: none;
-}
-
-/* Hidden
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10-.
- */
-
-[hidden] {
-  display: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
-  line-height: 1.5;
-}
-
-.container {
-  max-width: 70rem;
-  margin: 0 auto;
-}
-
-.txt-color {
-  color: #430e16;
-}
-
-.title-size {
-  font-size: 10rem;
-}
-
-canvas {
-  max-width: 50rem;
-  margin: 3.13rem auto;
-}
-
-.whs-nw {
-  white-space: nowrap;
-}
-
-.textd-u {
-  text-decoration: underline;
-}
-
-.textd-n {
-  text-decoration: none;
-}
-
-.btn-share {
-  font-size: 1rem;
-
-  padding: 1.25rem;
-
-  text-decoration: none;
-
-  color: #fff;
-}
-
-.btn-share-facebook {
-  background-color: #3B5998;
-}
-
-.btn-share-twitter {
-  background-color: #00ACEE;
-}
-
-.w-10 {
-  width: 10%;
-}
-
-.w-20 {
-  width: 20%;
-}
-
-.w-30 {
-  width: 30%;
-}
-
-.w-40 {
-  width: 40%;
-}
-
-.w-50 {
-  width: 50%;
-}
-
-.w-60 {
-  width: 60%;
-}
-
-.w-70 {
-  width: 70%;
-}
-
-.w-80 {
-  width: 80%;
-}
-
-.w-90 {
-  width: 90%;
-}
-
-.w-100 {
-  width: 100%;
-}
-
-.black {
-  color: #463c3e;
-}
-
-.cruise {
-  background-color: #b9eee6;
-}
-
-.cruise2 {
-  background-color: #def7f2;
-}
-
-.white {
-  color: #fff;
-}
-
-.heath {
-  color: #430e16;
-}
-
-.red9 {
-  color: #71585c;
-}
-
-.green9 {
-  color: #5d7259;
-}
-
-.azul-pp {
-  color: #0080B8;
-}
-
-.rojo-psoe {
-  color: #CE1A23;
-}
-
-.display-ib {
-  display: inline-block;
-}
-
-.display-b {
-  display: block;
-}
-
-.font-0 {
-  font-size: 0;
-}
-
-.font-1 {
-  font-size: 1rem;
-}
-
-.font-2 {
-  font-size: 2rem;
-}
-
-.margin-t0 {
-  margin-top: 0;
-}
-
-.margin-b0 {
-  margin-bottom: 0;
-}
-
-.margin-r1 {
-  margin-right: 1rem;
-}
-
-.margin-y0 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.margin-y1 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.margin-t1 {
-  margin-top: 1rem;
-}
-
-.margin-t-2 {
-  margin-top: -2rem;
-}
-
-.texta-l {
-  text-align: left;
-}
-
-.texta-r {
-  text-align: right;
-}
-
-.texta-c {
-  text-align: center;
-}
-
-.vertical-am {
-  vertical-align: middle;
-}
-
-.font-w8 {
-  font-weight: 800;
-}
-
-.padding-b1 {
-  padding-bottom: 1rem;
-}
-
-.padding-1 {
-  padding: 1rem;
-}
-
-.padding-2 {
-  padding: 2rem;
-}
-
-.border-b {
-  border-bottom: 1px solid #463c3e;
-}
-
-.border1 {
-  border: 1px solid;
-}
-
-.borderc-black {
-  border-color: #463c3e;
-}
-
-.border-l5 {
-  border-left: 5px solid;
-}
-
-.borderc-pp {
-  border-color: #0080B8;
-}
-
-.borderc-psoe {
-  border-color: #CE1A23;
-}
-
-.borderc-cs {
-  border-color: #D64224;
-}
-
-.borderc-ch {
-  border-color: #EFB027;
-}
-
-.borderc-zec {
-  border-color: #9A1622;
-}
-
-
-/*# sourceMappingURL=styles.css.map */
+/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */html{font-family:sans-serif;line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 2.5rem}hr{overflow:visible;box-sizing:content-box;height:0}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}abbr[title]{text-decoration:underline;text-decoration:underline dotted;border-bottom:none}b,strong{font-weight:inherit;font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{color:#000;background-color:#ff0}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{padding:0;border-style:none}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{margin:0 .13rem;padding:.35em .625em .75em;border:1px solid silver}legend{display:table;box-sizing:border-box;max-width:100%;padding:0;white-space:normal;color:inherit}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{outline-offset:-2px;-webkit-appearance:textfield}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{font:inherit;-webkit-appearance:button}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}[hidden],template{display:none}*{box-sizing:border-box}body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Helvetica,sans-serif;line-height:1.5}.container{max-width:70rem;margin:0 auto}.txt-color{color:#430e16}.title-size{font-size:10rem}canvas{max-width:50rem;margin:3.13rem auto}.whs-nw{white-space:nowrap}.textd-u{text-decoration:underline}.btn-share,.textd-n{text-decoration:none}.btn-share{font-size:1rem;padding:1.25rem;color:#fff}.btn-share-facebook{background-color:#3b5998}.btn-share-twitter{background-color:#00acee}.w-10{width:10%}.w-20{width:20%}.w-30{width:30%}.w-40{width:40%}.w-50{width:50%}.w-60{width:60%}.w-70{width:70%}.w-80{width:80%}.w-90{width:90%}.w-100{width:100%}.black{color:#463c3e}.cruise{background-color:#b9eee6}.cruise2{background-color:#def7f2}.white{color:#fff}.heath{color:#430e16}.red9{color:#71585c}.green9{color:#5d7259}.azul-pp{color:#0080b8}.rojo-psoe{color:#ce1a23}.display-ib{display:inline-block}.display-b{display:block}.font-0{font-size:0}.font-1{font-size:1rem}.font-2{font-size:2rem}.margin-t0{margin-top:0}.margin-b0{margin-bottom:0}.margin-r1{margin-right:1rem}.margin-y0{margin-top:0;margin-bottom:0}.margin-y1{margin-bottom:1rem}.margin-t1,.margin-y1{margin-top:1rem}.margin-t-2{margin-top:-2rem}.texta-l{text-align:left}.texta-r{text-align:right}.texta-c{text-align:center}.vertical-am{vertical-align:middle}.font-w8{font-weight:800}.padding-b1{padding-bottom:1rem}.padding-1{padding:1rem}.padding-2{padding:2rem}.border-b{border-bottom:1px solid #463c3e}.border1{border:1px solid}.borderc-black{border-color:#463c3e}.border-l5{border-left:5px solid}.borderc-pp{border-color:#0080b8}.borderc-psoe{border-color:#ce1a23}.borderc-cs{border-color:#d64224}.borderc-ch{border-color:#efb027}.borderc-zec{border-color:#9a1622}
