incluyendo nuevas hojas de estilos

--- a/src/css/_color.css
+++ b/src/css/_color.css
@@ -33,3 +33,23 @@
 .rojo-psoe {
   color: var(--psoe);
 }
+
+.bgc-pp {
+  background-color: var(--pp);
+}
+
+.bgc-psoe {
+  background-color: var(--psoe);
+}
+
+.bgc-zec {
+  background-color: var(--zec);
+}
+
+.bgc-cs {
+  background-color: var(--ciudadanos);
+}
+
+.bgc-cha {
+  background-color: var(--chunta);
+}
