--- a/src/css/_border.css
+++ b/src/css/_border.css
@@ -18,6 +18,14 @@
   border-left: 5px solid;
 }
 
+.border-b5 {
+  border-bottom: 5px solid;
+}
+
+.border-t5 {
+  border-top: 5px solid;
+}
+
 .borderc-pp {
   border-color: var(--pp);
 }
