--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -37,35 +37,10 @@ body {
   text-decoration: none;
 }
 
+.c3-chart-arc text {
+    fill: #000 !important;
+    font-size: 16px !important;
+    font-weight: bold !important;
+    font-family: var(--fontSystem);
 
-/*
-
-Anchos especificos para cada partido en función del porcentaje de voto obtenido. Multiplicados por 1.5 ya que el ancho de CHA no dejaba ver sus siglas al tamaño mínimo de fuente para TODAS personas sin distinción de edad, problema visual, dispositivo.
-
-*/
-
-.w-pp {
-  width: calc(26.88% * 1.75);
 }
-
-.w-zec {
-  width: calc(24.57% * 1.75);
-}
-
-.w-psoe {
-  width: calc(18.65% * 1.75);
-}
-
-.w-cs {
-  width: calc(12.29% * 1.75);
-}
-
-.w-cha {
-  width: calc(6.78% * 1.75);
-}
-
-
-
-
-
-
