--- a/css/styles.css
+++ b/css/styles.css
@@ -527,7 +527,12 @@ body {
     font-weight: bold !important;
 
     fill: #000 !important;
+}
 
+.c3 text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 1rem !important;
+    font-weight: bold !important;
 }
 
 .btn-share {
