--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -42,5 +42,10 @@ body {
     font-size: 16px !important;
     font-weight: bold !important;
     font-family: var(--fontSystem);
+}
 
+.c3 text {
+    font-size: 16px !important;
+    font-weight: bold !important;
+    font-family: var(--fontSystem);
 }
