--- a/src/css/_fonts.css
+++ b/src/css/_fonts.css
@@ -9,3 +9,15 @@
 .font-2 {
   font-size: 2rem;
 }
+
+.font-3 {
+  font-size: 3rem;
+}
+
+.font-4 {
+  font-size: 4rem;
+}
+
+.font-5 {
+  font-size: 5rem;
+}
