--- a/src/css/_border.css
+++ b/src/css/_border.css
@@ -2,6 +2,10 @@
   border-bottom: 1px solid var(--black);
 }
 
+.border-t {
+  border-top: 1px solid var(--black);
+}
+
 .border1 {
   border: 1px solid;
 }
