--- a/src/css/_buttons.css
+++ b/src/css/_buttons.css
@@ -1,8 +1,10 @@
 .btn-share {
-  padding: 20px;
+  padding: .5rem 1rem;
   text-decoration: none;
   color: var(--white);
   font-size: 16px;
+  display: inline-block;
+  margin-top: .5rem;
 }
 
 .btn-share-facebook {
