--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,6 +1,8 @@
 :root {
     --fontSystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
     --black: #121;
+    --grey: #ccc;
+    --rojo: #6593CD;
     --cruise: #b9eee6;
     --cruise2: #def7f2;
     --heath: #430e16;
