--- a/src/css/_padding.css
+++ b/src/css/_padding.css
@@ -2,8 +2,16 @@
   padding-bottom: 1rem;
 }
 
+.padding-b2 {
+  padding-bottom: 2rem;
+}
+
 .padding-t1 {
   padding-top: 1rem;
+}
+
+.padding-r1 {
+  padding-right: 1rem;
 }
 
 .padding-1 {
