--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -16,6 +16,6 @@
     --pp: #0080B8;
     --psoe: #CE1A23;
     --zec: #9A1622;
-    --ciudadanos: #D64224;
+    --ciudadanos: #f07a36;
     --chunta: #EFB027;
 }
