--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,776 @@
-/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,figcaption,figure,footer,header,main,nav,section{display:block}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}abbr[title]{text-decoration:underline;text-decoration:underline dotted;border-bottom:none}b,strong{font-weight:inherit;font-weight:bolder}small{font-size:80%}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{padding:0;border-style:none}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{outline-offset:-2px;-webkit-appearance:textfield}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{font:inherit;-webkit-appearance:button}[hidden]{display:none}*{box-sizing:border-box}body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Helvetica,sans-serif;line-height:1.5}.txt-color{color:#430e16}.whs-nw{white-space:nowrap}.textd-u{text-decoration:underline}.textd-n{text-decoration:none}.c3-chart-arc text{fill:#000!important}.c3 text,.c3-chart-arc text{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Helvetica,sans-serif;font-size:1rem!important;font-weight:700!important}.btn-share{font-size:1rem;display:inline-block;margin-top:.5rem;padding:.5rem 1rem;text-decoration:none;color:#fff}.btn-share-facebook{background-color:#3b5998}.btn-share-twitter{background-color:#00acee}.maw-70{max-width:70rem;margin:0 auto}.w-0{width:0}.w-10{width:10%}.w-20{width:20%}.w-30{width:30%}.w-40{width:40%}.w-50{width:50%}.w-60{width:60%}.w-70{width:70%}.w-80{width:80%}.w-90{width:90%}.w-100{width:100%}.black{color:#121}.cruise{background-color:#b9eee6}.cruise2{background-color:#def7f2}.white{color:#fff}.heath{color:#430e16}.red9{color:#71585c}.green9{color:#5d7259}.azul-pp{color:#0080b8}.rojo-psoe{color:#ce1a23}.bgc-pp{background-color:#0080b8}.bgc-psoe{background-color:#ce1a23}.bgc-zec{background-color:#9a1622}.bgc-cs{background-color:#d64224}.bgc-cha{background-color:#efb027}.display-ib{display:inline-block}.display-b{display:block}.font-0{font-size:0}.font-1{font-size:1rem}.font-2{font-size:2rem}.font-3{font-size:3rem}.font-4{font-size:4rem}.font-5{font-size:5rem}.margin-t0{margin-top:0}.margin-b0{margin-bottom:0}.margin-b1{margin-bottom:1rem}.margin-r1{margin-right:1rem}.margin-yx{margin:0 auto}.margin-y0{margin-top:0;margin-bottom:0}.margin-y1{margin-bottom:1rem}.margin-t1,.margin-y1{margin-top:1rem}.margin-t-2{margin-top:-2rem}.texta-l{text-align:left}.texta-r{text-align:right}.texta-c{text-align:center}.vertical-am{vertical-align:middle}.font-w8{font-weight:800}.padding-b1{padding-bottom:1rem}.padding-b2{padding-bottom:2rem}.padding-t1{padding-top:1rem}.padding-r1{padding-right:1rem}.padding-1{padding:1rem}.padding-1-0{padding:1rem 0}.padding-2{padding:2rem}.padding-2-0{padding:2rem 0}.border-b1{border-bottom:1px solid}.border-t1{border-top:1px solid}.border1{border:1px solid}.borderc-black{border-color:#121}.borderc-rojo{border-color:#6593cd}.borderc-grey{border-color:#ccc}.border-l2{border-left:2px solid}.border-l3{border-left:3px solid}.border-b3{border-bottom:3px solid}.border-t3{border-top:3px solid}.border-l5{border-left:5px solid}.border-b5{border-bottom:5px solid}.border-t5{border-top:5px solid}.borderc-pp{border-color:#0080b8}.borderc-psoe{border-color:#ce1a23}.borderc-cs{border-color:#d64224}.borderc-ch{border-color:#efb027}.borderc-zec{border-color:#9a1622}.h-2{height:2rem}.h-3{height:3rem}.h-5{height:5rem}.h-10{height:10rem}.h-24{height:24rem}.pos-r{position:relative}.pos-a{position:absolute}.pos-f{position:fixed}.pos-s{position:static}.tp-0{top:0}.tp-1{top:10%}.tp-2{top:20%}.tp-3{top:30%}.tp-4{top:40%}.tp-5{top:50%}.tp-6{top:60%}.tp-7{top:70%}.tp-8{top:80%}.tp-9{top:90%}.tp-10{top:100%}.rt-0{right:0}.fl-l{float:left}.fl-r{float:right}.fl-n{float:none}.clearfix:after,.clearfix:before{display:table;content:" "}.clearfix:after{clear:both}
+/*
+  Astral 0.1b CSS toolkit por Jorge Aznar
+  http://jorgeatgu.com
+*/
+
+/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
+
+/* Document
+   ========================================================================== */
+
+/**
+ * 1. Change the default font family in all browsers (opinionated).
+ * 2. Correct the line height in all browsers.
+ * 3. Prevent adjustments of font size after orientation changes in
+ *    IE on Windows Phone and in iOS.
+ */
+
+html {
+  font-family: sans-serif; /* 1 */
+
+  -ms-text-size-adjust: 100%; /* 3 */
+  -webkit-text-size-adjust: 100%; /* 3 */
+}
+
+/* Sections
+   ========================================================================== */
+
+/**
+ * Remove the margin in all browsers (opinionated).
+ */
+
+body {
+  margin: 0;
+}
+
+/**
+ * Add the correct display in IE 9-.
+ */
+
+article,
+aside,
+footer,
+header,
+nav,
+section {
+  display: block;
+}
+
+/* Grouping content
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in IE.
+ */
+
+figcaption,
+figure,
+main { /* 1 */
+  display: block;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+
+/**
+ * 1. Remove the gray background on active links in IE 10.
+ * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
+ */
+
+a {
+  background-color: transparent; /* 1 */
+
+  -webkit-text-decoration-skip: objects; /* 2 */
+}
+
+/**
+ * Remove the outline on focused links when they are also active or hovered
+ * in all browsers (opinionated).
+ */
+
+a:active,
+a:hover {
+  outline-width: 0;
+}
+
+/**
+ * 1. Remove the bottom border in Firefox 39-.
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+
+abbr[title] {
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+
+  border-bottom: none; /* 1 */
+}
+
+/**
+ * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
+ */
+
+b,
+strong {
+  font-weight: inherit;
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+/**
+ * Add the correct font size in all browsers.
+ */
+
+small {
+  font-size: 80%;
+}
+
+/* Embedded content
+   ========================================================================== */
+
+/**
+ * Remove the border on images inside links in IE 10-.
+ */
+
+img {
+  border-style: none;
+}
+
+/**
+ * Hide the overflow in IE.
+ */
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+/* Forms
+   ========================================================================== */
+
+/**
+ * 1. Change the font styles in all browsers (opinionated).
+ * 2. Remove the margin in Firefox and Safari.
+ */
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: sans-serif; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+ *    controls in Android 4.
+ * 2. Correct the inability to style clickable types in iOS and Safari.
+ */
+
+button,
+html [type="button"], /* 1 */
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; /* 2 */
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  padding: 0;
+
+  border-style: none;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10-.
+ * 2. Remove the padding in IE 10-.
+ */
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+
+[type="search"] {
+  outline-offset: -2px; /* 2 */
+
+  -webkit-appearance: textfield; /* 1 */
+}
+
+/**
+ * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
+ */
+
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+
+::-webkit-file-upload-button {
+  font: inherit; /* 2 */
+
+  -webkit-appearance: button; /* 1 */
+}
+
+/* Hidden
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 10-.
+ */
+
+[hidden] {
+  display: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+  line-height: 1.5;
+}
+
+.txt-color {
+  color: #430e16;
+}
+
+.whs-nw {
+  white-space: nowrap;
+}
+
+.textd-u {
+  text-decoration: underline;
+}
+
+.textd-n {
+  text-decoration: none;
+}
+
+.c3-chart-arc text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 1rem !important;
+    font-weight: bold !important;
+
+    fill: #000 !important;
+}
+
+.c3 text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 1rem !important;
+    font-weight: bold !important;
+}
+
+.btn-share {
+  font-size: 1rem;
+
+  display: inline-block;
+
+  margin-top: .5rem;
+  padding: .5rem 1rem;
+
+  text-decoration: none;
+
+  color: #fff;
+}
+
+.btn-share-facebook {
+  background-color: #3B5998;
+}
+
+.btn-share-twitter {
+  background-color: #00ACEE;
+}
+
+.maw-70 {
+  max-width: 70rem;
+  margin: 0 auto;
+}
+
+.w-0 {
+  width: 0;
+}
+
+.w-10 {
+  width: 10%;
+}
+
+.w-20 {
+  width: 20%;
+}
+
+.w-30 {
+  width: 30%;
+}
+
+.w-40 {
+  width: 40%;
+}
+
+.w-50 {
+  width: 50%;
+}
+
+.w-60 {
+  width: 60%;
+}
+
+.w-70 {
+  width: 70%;
+}
+
+.w-80 {
+  width: 80%;
+}
+
+.w-90 {
+  width: 90%;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.black {
+  color: #121;
+}
+
+.cruise {
+  background-color: #b9eee6;
+}
+
+.cruise2 {
+  background-color: #def7f2;
+}
+
+.white {
+  color: #fff;
+}
+
+.heath {
+  color: #430e16;
+}
+
+.red9 {
+  color: #71585c;
+}
+
+.green9 {
+  color: #5d7259;
+}
+
+.azul-pp {
+  color: #0080B8;
+}
+
+.rojo-psoe {
+  color: #CE1A23;
+}
+
+.bgc-pp {
+  background-color: #0080B8;
+}
+
+.bgc-psoe {
+  background-color: #CE1A23;
+}
+
+.bgc-zec {
+  background-color: #9A1622;
+}
+
+.bgc-cs {
+  background-color: #f07a36;
+}
+
+.bgc-cha {
+  background-color: #EFB027;
+}
+
+.display-ib {
+  display: inline-block;
+}
+
+.display-b {
+  display: block;
+}
+
+.font-0 {
+  font-size: 0;
+}
+
+.font-1 {
+  font-size: 1rem;
+}
+
+.font-2 {
+  font-size: 2rem;
+}
+
+.font-3 {
+  font-size: 3rem;
+}
+
+.font-4 {
+  font-size: 4rem;
+}
+
+.font-5 {
+  font-size: 5rem;
+}
+
+.margin-t0 {
+  margin-top: 0;
+}
+
+.margin-b0 {
+  margin-bottom: 0;
+}
+
+.margin-b1 {
+  margin-bottom: 1rem;
+}
+
+.margin-r1 {
+  margin-right: 1rem;
+}
+
+.margin-yx {
+  margin: 0 auto;
+}
+
+.margin-y0 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.margin-y1 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.margin-t1 {
+  margin-top: 1rem;
+}
+
+.margin-t-2 {
+  margin-top: -2rem;
+}
+
+.texta-l {
+  text-align: left;
+}
+
+.texta-r {
+  text-align: right;
+}
+
+.texta-c {
+  text-align: center;
+}
+
+.vertical-am {
+  vertical-align: middle;
+}
+
+.font-w8 {
+  font-weight: 800;
+}
+
+.padding-b1 {
+  padding-bottom: 1rem;
+}
+
+.padding-b2 {
+  padding-bottom: 2rem;
+}
+
+.padding-t1 {
+  padding-top: 1rem;
+}
+
+.padding-r1 {
+  padding-right: 1rem;
+}
+
+.padding-1 {
+  padding: 1rem;
+}
+
+.padding-1-0 {
+  padding: 1rem 0;
+}
+
+.padding-2 {
+  padding: 2rem;
+}
+
+.padding-2-0 {
+  padding: 2rem 0;
+}
+
+.border-b1 {
+  border-bottom: 1px solid;
+}
+
+.border-t1 {
+  border-top: 1px solid;
+}
+
+.border1 {
+  border: 1px solid;
+}
+
+.borderc-black {
+  border-color: #121;
+}
+
+.borderc-rojo {
+  border-color: #6593CD;
+}
+
+.borderc-grey {
+  border-color: #ccc;
+}
+
+.border-l2 {
+  border-left: 2px solid;
+}
+
+.border-l3 {
+  border-left: 3px solid;
+}
+
+.border-b3 {
+  border-bottom: 3px solid;
+}
+
+.border-t3 {
+  border-top: 3px solid;
+}
+
+.border-l5 {
+  border-left: 5px solid;
+}
+
+.border-b5 {
+  border-bottom: 5px solid;
+}
+
+.border-t5 {
+  border-top: 5px solid;
+}
+
+.border-b10 {
+  border-bottom: 10px solid;
+}
+
+.border-t10 {
+  border-top: 10px solid;
+}
+
+.borderc-pp {
+  border-color: #0080B8;
+}
+
+.borderc-psoe {
+  border-color: #CE1A23;
+}
+
+.borderc-cs {
+  border-color: #f07a36;
+}
+
+.borderc-ch {
+  border-color: #EFB027;
+}
+
+.borderc-zec {
+  border-color: #9A1622;
+}
+
+.borderc-b-cs {
+  border-bottom-color: #f07a36;
+}
+
+.h-2 {
+  height: 2rem;
+}
+
+.h-3 {
+  height: 3rem;
+}
+
+.h-5 {
+  height: 5rem;
+}
+
+.h-10 {
+  height: 10rem;
+}
+
+.h-24 {
+  height: 24rem;
+}
+
+.pos-r {
+  position: relative;
+}
+
+.pos-a {
+  position: absolute;
+}
+
+.pos-f {
+  position: fixed;
+}
+
+.pos-s {
+  position: static;
+}
+
+.tp-0 {
+  top: 0;
+}
+
+.tp-1 {
+  top: 10%;
+}
+
+.tp-2 {
+  top: 20%;
+}
+
+.tp-3 {
+  top: 30%;
+}
+
+.tp-4 {
+  top: 40%;
+}
+
+.tp-5 {
+  top: 50%;
+}
+
+.tp-6 {
+  top: 60%;
+}
+
+.tp-7 {
+  top: 70%;
+}
+
+.tp-8 {
+  top: 80%;
+}
+
+.tp-9 {
+  top: 90%;
+}
+
+.tp-10 {
+  top: 100%;
+}
+
+.rt-0 {
+  right: 0;
+}
+
+.fl-l {
+  float: left;
+}
+
+.fl-r {
+  float: right;
+}
+
+.fl-n {
+  float: none;
+}
+
+.clearfix:before,
+.clearfix:after {
+  display: table;
+
+  content: " ";
+}
+
+.clearfix:after {
+  clear: both;
+}
+
+/*# sourceMappingURL=styles.css.map */
