incluyendo colores en las mociones impares | añadiendo un target=_blank para los enlaces que acaban fuera de bislai

--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -3,7 +3,7 @@
     --black: #121;
     --grey: #ccc;
     --rojo: #6593CD;
-    --cruise: #b9eee6;
+    --cruise: rgba(185, 238, 230,.3);
     --cruise2: #def7f2;
     --heath: #430e16;
     --white: #fff;
