--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -23,6 +23,8 @@ body {
   text-decoration: none;
 }
 
+/*Machacando a fuego los estilos que incluye c3*/
+
 .c3-chart-arc text {
     fill: #000 !important;
     font-size: 16px !important;
@@ -34,4 +36,8 @@ body {
     font-size: 16px !important;
     font-weight: bold !important;
     font-family: var(--fontSystem);
+}
+
+.c3-chart-arc path {
+    stroke: #6d6c6c !important;
 }
