modificando colores :rainbow:

--- a/css/styles.css
+++ b/css/styles.css
@@ -443,7 +443,7 @@ body {
 }
 
 .rojo-psoe {
-  color: #CE1A23;
+  color: #E30613;
 }
 
 .bgc-pp {
@@ -451,7 +451,7 @@ body {
 }
 
 .bgc-psoe {
-  background-color: #CE1A23;
+  background-color: #E30613;
 }
 
 .bgc-zec {
@@ -653,7 +653,7 @@ body {
 }
 
 .borderc-psoe {
-  border-color: #CE1A23;
+  border-color: #E30613;
 }
 
 .borderc-cs {
