--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -14,7 +14,7 @@
     --red9: #71585c;
     --green9: #5d7259;
     --pp: #0080B8;
-    --psoe: #CE1A23;
+    --psoe: #E30613;
     --zec: #9A1622;
     --ciudadanos: #f07a36;
     --chunta: #EFB027;
