--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -37,3 +37,8 @@ body {
     font-weight: bold !important;
     font-family: var(--fontSystem);
 }
+
+canvas {
+  width: 400px !important;
+  height: 400px !important;
+}
