--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -3,6 +3,7 @@
     --black: #121;
     --rojo: #6593CD;
     --grey: #efefef;
+    --greyc: #efefef;
     --cruise2: #def7f2;
     --heath: #430e16;
     --white: #fff;
