--- a/src/css/_buttons.css
+++ b/src/css/_buttons.css
@@ -2,15 +2,25 @@
   padding: .5rem 1rem;
   text-decoration: none;
   color: var(--white);
-  font-size: 16px;
+  font-size: 14px;
   display: inline-block;
   margin-top: .5rem;
 }
 
 .btn-share-facebook {
   background-color: var(--facebookColor);
+  border: 1px solid var(--facebookColor);
+  &:hover {
+    background-color: var(--white);
+    color: var(--facebookColor);
+  }
 }
 
 .btn-share-twitter {
   background-color: var(--twitterColor);
+  border: 1px solid var(--twitterColor);
+  &:hover {
+    background-color: var(--white);
+    color: var(--twitterColor);
+  }
 }
