cambio de colores para el resto de votos

--- a/css/styles.css
+++ b/css/styles.css
@@ -436,6 +436,10 @@ canvas {
   background-color: #efefef;
 }
 
+.resto {
+  background-color: #968282;
+}
+
 .bgc-white {
   background-color: #fff;
 }
