--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,6 +1,7 @@
 :root {
     --fontSystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
     --black: #121;
+    --resto: #968282;
     --rojo: #6593CD;
     --grey: #efefef;
     --greyc: #efefef;
