unificando las CSS de c3 con Astral

--- a/css/styles.css
+++ b/css/styles.css
@@ -320,6 +320,82 @@ body {
   text-decoration: none;
 }
 
+/*ESTILOS C3*/
+
+.c3 svg{font:0.63rem sans-serif;-webkit-tap-highlight-color:transparent}
+
+.c3 line,.c3 path{fill:none;stroke:#000}
+
+.c3 text{-webkit-user-select:none;-moz-user-select:none;user-select:none}
+
+.c3-bars path,.c3-event-rect,.c3-legend-item-tile,.c3-xgrid-focus,.c3-ygrid{shape-rendering:crispEdges}
+
+.c3-chart-arc path{stroke:#fff}
+
+.c3-chart-arc text{font-size:0.81rem;fill:#fff}
+
+.c3-grid line{stroke:#aaa}
+
+.c3-grid text{fill:#aaa}
+
+.c3-xgrid,.c3-ygrid{stroke-dasharray:3 3}
+
+.c3-text.c3-empty{font-size:2em;fill:gray}
+
+.c3-line{stroke-width:1px}
+
+.c3-circle._expanded_{stroke-width:1px;stroke:#fff}
+
+.c3-selected-circle{fill:#fff;stroke-width:2px}
+
+.c3-bar{stroke-width:0}
+
+.c3-bar._expanded_{fill-opacity:.75}
+
+.c3-target.c3-focused{opacity:1}
+
+.c3-target.c3-focused path.c3-line,.c3-target.c3-focused path.c3-step{stroke-width:2px}
+
+.c3-target.c3-defocused{opacity:.3!important}
+
+.c3-region{fill:#4682b4;fill-opacity:.1}
+
+.c3-brush .extent{fill-opacity:.1}
+
+.c3-legend-item{font-size:0.75rem}
+
+.c3-legend-item-hidden{opacity:.15}
+
+.c3-legend-background{opacity:.75;fill:#fff;stroke:#d3d3d3;stroke-width:1}
+
+.c3-title{font:0.88rem sans-serif}
+
+.c3-tooltip-container{z-index:10}
+
+.c3-tooltip{empty-cells:show;border-spacing:0;border-collapse:collapse;opacity:.9;background-color:#fff;-webkit-box-shadow:7px 7px 12px -9px #777;-moz-box-shadow:7px 7px 12px -9px #777;box-shadow:7px 7px 12px -9px #777}
+
+.c3-tooltip tr{border:1px solid #CCC}
+
+.c3-tooltip th{font-size:0.88rem;padding:0.13rem 0.31rem;text-align:left;color:#FFF;background-color:#aaa}
+
+.c3-tooltip td{font-size:0.81rem;padding:0.19rem 0.38rem;border-left:1px dotted #999;background-color:#fff}
+
+.c3-tooltip td>span{display:inline-block;width:10px;height:10px;margin-right:6px}
+
+.c3-tooltip td.value{text-align:right}
+
+.c3-area{opacity:.2;stroke-width:0}
+
+.c3-chart-arcs-title{font-size:1.3em;dominant-baseline:middle}
+
+.c3-chart-arcs .c3-chart-arcs-background{fill:#e0e0e0;stroke:none}
+
+.c3-chart-arcs .c3-chart-arcs-gauge-unit{font-size:1rem;fill:#000}
+
+.c3-chart-arcs .c3-chart-arcs-gauge-max,.c3-chart-arcs .c3-chart-arcs-gauge-min{fill:#777}
+
+.c3-chart-arc .c3-gauge-value{fill:#000}
+
 /*Machacando a fuego los estilos que incluye c3*/
 
 .c3-chart-arc text {
