--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -19,4 +19,8 @@
     --zec: #9A1622;
     --ciudadanos: #f07a36;
     --chunta: #EFB027;
+    --mint: #44AB87;
+    --nightRider: #431729;
+    --frenchGrey: #E1DCE3;
+    --bunting: #271764;
 }
