--- a/css/styles.css
+++ b/css/styles.css
@@ -320,7 +320,9 @@ body {
   text-decoration: none;
 }
 
-/*ESTILOS C3*/
+/* ESTILOS C3 */
+
+/* stylelint-disable */
 
 .c3 svg{font:0.63rem sans-serif;-webkit-tap-highlight-color:transparent}
 
@@ -396,7 +398,9 @@ body {
 
 .c3-chart-arc .c3-gauge-value{fill:#000}
 
-/*Machacando a fuego los estilos que incluye c3*/
+/* stylelint-enable */
+
+/* Machacando a fuego los estilos que incluye c3 */
 
 .c3-chart-arc text {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
@@ -513,7 +517,7 @@ canvas {
 }
 
 .bgc-mint {
-  background-color: #44AB87;
+  background-color: #0fe1be;
 }
 
 .night-rider {
@@ -767,7 +771,7 @@ canvas {
 }
 
 .borderc-mint {
-  border-color: #44AB87;
+  border-color: #0fe1be;
 }
 
 .border-l2 {
