--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -7,6 +7,10 @@ body {
   font-family: var(--fontSystem);
 }
 
+.font-s {
+  font-family: var(--fontSystem);
+}
+
 .txt-color {
   color: var(--heath);
 }
@@ -92,11 +96,9 @@ http://www.tipue.com/search
   padding: 17px;
   border: 1px solid #e3e3e3;
   border-radius: 0;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-     box-shadow: none;
   outline: 0;
   margin: 0;
+  font-family: var(--fontSystem);
 }
 .tipue_search_icon
 {
@@ -241,55 +243,3 @@ http://www.tipue.com/search
 }
 
 
-/* spinner */
-
-
-.tipue_search_spinner
-{
-     width: 50px;
-     height: 28px;
-}
-.tipue_search_spinner > div
-{
-     background-color: #e3e3e3;
-     height: 100%;
-     width: 2px;
-     display: inline-block;
-     margin-right: 2px;
-     -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
-     animation: stretchdelay 1.2s infinite ease-in-out;
-}
-.tipue_search_spinner .tipue_search_rect2
-{
-     -webkit-animation-delay: -1.1s;
-     animation-delay: -1.1s;
-}
-.tipue_search_spinner .tipue_search_rect3
-{
-     -webkit-animation-delay: -1.0s;
-     animation-delay: -1.0s;
-}
-@-webkit-keyframes stretchdelay
-{
-     0%, 40%, 100%
-     {
-          -webkit-transform: scaleY(0.4)
-     }
-     20%
-     {
-          -webkit-transform: scaleY(1.0)
-     }
-}
-@keyframes stretchdelay
-{
-     0%, 40%, 100%
-     {
-          transform: scaleY(0.4);
-          -webkit-transform: scaleY(0.4);
-     }
-     20%
-     {
-          transform: scaleY(1.0);
-          -webkit-transform: scaleY(1.0);
-     }
-}
