cambiando los metodos de la busqueda de tipueSearch

--- a/src/css/_color.css
+++ b/src/css/_color.css
@@ -2,6 +2,10 @@
   color: var(--black);
 }
 
+.transparent {
+  background-color: transparent;
+}
+
 .bgc-mint {
   background-color: var(--mint);
 }
