--- a/src/css/_position.css
+++ b/src/css/_position.css
@@ -18,6 +18,10 @@
   top: 0;
 }
 
+.tp-5p {
+  top: 5px;
+}
+
 .tp-1 {
   top: 10%;
 }
@@ -60,6 +64,14 @@
 
 .rt-0 {
   right: 0;
+}
+
+.lf-0 {
+  left: 0;
+}
+
+.lf-5 {
+  left: 5px;
 }
 
 
