--- a/css/styles.css
+++ b/css/styles.css
@@ -328,96 +328,225 @@ body {
 
 /* stylelint-disable */
 
-.c3 svg{font:0.63rem sans-serif;-webkit-tap-highlight-color:transparent}
+.c3 svg {
+  font: 0.63rem sans-serif;
 
-.c3 line,.c3 path{fill:none;stroke:#000}
+  -webkit-tap-highlight-color: transparent
+}
 
-.c3 text{-webkit-user-select:none;-moz-user-select:none;user-select:none}
+.c3 line,
+.c3 path {
+  fill: none;
+  stroke: #000
+}
 
-.c3-bars path,.c3-event-rect,.c3-legend-item-tile,.c3-xgrid-focus,.c3-ygrid{shape-rendering:crispEdges}
+.c3 text {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none
+}
 
-.c3-chart-arc path{stroke:#fff}
+.c3-bars path,
+.c3-event-rect,
+.c3-legend-item-tile,
+.c3-xgrid-focus,
+.c3-ygrid {
+  shape-rendering: crispEdges
+}
 
-.c3-chart-arc text{font-size:0.81rem;fill:#fff}
+.c3-chart-arc path {
+  stroke: #fff
+}
 
-.c3-grid line{stroke:#aaa}
+.c3-chart-arc text {
+  font-size: 0.81rem;
 
-.c3-grid text{fill:#aaa}
+  fill: #fff
+}
 
-.c3-xgrid,.c3-ygrid{stroke-dasharray:3 3}
+.c3-grid line {
+  stroke: #aaa
+}
 
-.c3-text.c3-empty{font-size:2em;fill:gray}
+.c3-grid text {
+  fill: #aaa
+}
 
-.c3-line{stroke-width:1px}
+.c3-xgrid,
+.c3-ygrid {
+  stroke-dasharray: 3 3
+}
 
-.c3-circle._expanded_{stroke-width:1px;stroke:#fff}
+.c3-text.c3-empty {
+  font-size: 2em;
 
-.c3-selected-circle{fill:#fff;stroke-width:2px}
+  fill: gray
+}
 
-.c3-bar{stroke-width:0}
+.c3-line {
+  stroke-width: 1px
+}
 
-.c3-bar._expanded_{fill-opacity:.75}
+.c3-circle._expanded_ {
+  stroke-width: 1px;
+  stroke: #fff
+}
 
-.c3-target.c3-focused{opacity:1}
+.c3-selected-circle {
+  fill: #fff;
+  stroke-width: 2px
+}
 
-.c3-target.c3-focused path.c3-line,.c3-target.c3-focused path.c3-step{stroke-width:2px}
+.c3-bar {
+  stroke-width: 0
+}
 
-.c3-target.c3-defocused{opacity:.3!important}
+.c3-bar._expanded_ {
+  fill-opacity: .75
+}
 
-.c3-region{fill:#4682b4;fill-opacity:.1}
+.c3-target.c3-focused {
+  opacity: 1
+}
 
-.c3-brush .extent{fill-opacity:.1}
+.c3-target.c3-focused path.c3-line,
+.c3-target.c3-focused path.c3-step {
+  stroke-width: 2px
+}
 
-.c3-legend-item{font-size:0.75rem}
+.c3-target.c3-defocused {
+  opacity: .3!important
+}
 
-.c3-legend-item-hidden{opacity:.15}
+.c3-region {
+  fill: #4682b4;
+  fill-opacity: .1
+}
 
-.c3-legend-background{opacity:.75;fill:#fff;stroke:#d3d3d3;stroke-width:1}
+.c3-brush .extent {
+  fill-opacity: .1
+}
 
-.c3-title{font:0.88rem sans-serif}
+.c3-legend-item {
+  font-size: 0.75rem
+}
 
-.c3-tooltip-container{z-index:10}
+.c3-legend-item-hidden {
+  opacity: .15
+}
 
-.c3-tooltip{empty-cells:show;border-spacing:0;border-collapse:collapse;opacity:.9;background-color:#fff;-webkit-box-shadow:7px 7px 12px -9px #777;-moz-box-shadow:7px 7px 12px -9px #777;box-shadow:7px 7px 12px -9px #777}
+.c3-legend-background {
+  opacity: .75;
 
-.c3-tooltip tr{border:1px solid #CCC}
+  fill: #fff;
+  stroke: #d3d3d3;
+  stroke-width: 1
+}
 
-.c3-tooltip th{font-size:0.88rem;padding:0.13rem 0.31rem;text-align:left;color:#FFF;background-color:#aaa}
+.c3-title {
+  font: 0.88rem sans-serif
+}
 
-.c3-tooltip td{font-size:0.81rem;padding:0.19rem 0.38rem;border-left:1px dotted #999;background-color:#fff}
+.c3-tooltip-container {
+  z-index: 10
+}
 
-.c3-tooltip td>span{display:inline-block;width:10px;height:10px;margin-right:6px}
+.c3-tooltip {
+  empty-cells: show;
+  border-spacing: 0;
+  border-collapse: collapse;
 
-.c3-tooltip td.value{text-align:right}
+  opacity: .9;
+  background-color: #fff;
+  -webkit-box-shadow: 7px 7px 12px -9px #777;
+  -moz-box-shadow: 7px 7px 12px -9px #777;
+  box-shadow: 7px 7px 12px -9px #777
+}
 
-.c3-area{opacity:.2;stroke-width:0}
+.c3-tooltip tr {
+  border: 1px solid #CCC
+}
 
-.c3-chart-arcs-title{font-size:1.3em;dominant-baseline:middle}
+.c3-tooltip th {
+  font-size: 0.88rem;
 
-.c3-chart-arcs .c3-chart-arcs-background{fill:#e0e0e0;stroke:none}
+  padding: 0.13rem 0.31rem;
 
-.c3-chart-arcs .c3-chart-arcs-gauge-unit{font-size:1rem;fill:#000}
+  text-align: left;
 
-.c3-chart-arcs .c3-chart-arcs-gauge-max,.c3-chart-arcs .c3-chart-arcs-gauge-min{fill:#777}
+  color: #FFF;
+  background-color: #aaa
+}
 
-.c3-chart-arc .c3-gauge-value{fill:#000}
+.c3-tooltip td {
+  font-size: 0.81rem;
+
+  padding: 0.19rem 0.38rem;
+
+  border-left: 1px dotted #999;
+  background-color: #fff
+}
+
+.c3-tooltip td>span {
+  display: inline-block;
+
+  width: 10px;
+  height: 10px;
+  margin-right: 6px
+}
+
+.c3-tooltip td.value {
+  text-align: right
+}
+
+.c3-area {
+  opacity: .2;
+
+  stroke-width: 0
+}
+
+.c3-chart-arcs-title {
+  font-size: 1.3em;
+
+  dominant-baseline: middle
+}
+
+.c3-chart-arcs .c3-chart-arcs-background {
+  fill: #e0e0e0;
+  stroke: none
+}
+
+.c3-chart-arcs .c3-chart-arcs-gauge-unit {
+  font-size: 1rem;
+
+  fill: #000
+}
+
+.c3-chart-arcs .c3-chart-arcs-gauge-max,
+.c3-chart-arcs .c3-chart-arcs-gauge-min {
+  fill: #777
+}
+
+.c3-chart-arc .c3-gauge-value {
+  fill: #000
+}
 
 /* stylelint-enable */
 
 /* Machacando a fuego los estilos que incluye c3 */
 
 .c3-chart-arc text {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
-    font-size: 1rem !important;
-    font-weight: bold !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 1rem !important;
+  font-weight: bold !important;
 
-    fill: #000 !important;
+  fill: #000 !important;
 }
 
 .c3 text {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
-    font-size: 1rem !important;
-    font-weight: bold !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 1rem !important;
+  font-weight: bold !important;
 }
 
 canvas {
@@ -434,186 +563,165 @@ http://www.tipue.com/search
 
 /* fonts */
 
-#tipue_search_input, #tipue_search_foot_boxes
-{
-     font: 300 0.88rem/1 Roboto, sans-serif;
+#tipue_search_input,
+#tipue_search_foot_boxes,
+#tipue_search_results_count,
+#tipue_search_warning,
+.tipue_search_content_url,
+.tipue_search_content_debug,
+.tipue_search_related_text {
+  font-size: 0.88rem;
 }
 
-#tipue_search_results_count, #tipue_search_warning, .tipue_search_content_url, .tipue_search_content_debug, .tipue_search_related_text
-{
-     font: 300 0.88rem/1.7 Roboto, sans-serif;
+.tipue_search_content_title {
+  font-size: 1.63rem;
 }
 
-.tipue_search_content_title
-{
-     font: 100 1.63rem/1.7 Roboto, sans-serif;
+.tipue_search_content_text,
+.tipue_search_related_title {
+  font-size: 0.94rem;
 }
 
-.tipue_search_content_text, .tipue_search_related_title
-{
-     font: 300 0.94rem/1.7 Roboto, sans-serif;
-}
-
-.tipue_search_content_bold, .tipue_search_related_bold
-{
-     font-weight: 400;
+.tipue_search_content_bold,
+.tipue_search_related_bold {
+  font-weight: bold;
 }
 
 /* search box */
 
-#tipue_search_input
-{
+#tipue_search_input {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
 
-     max-width: 210px;
   margin: 0;
   padding: 1.06rem;
 
-     color: #333;
-  border: 1px solid #e3e3e3;
+  color: #333;
+  border: 1px solid #1B305F;
   border-radius: 0;
   outline: 0;
 }
 
-.tipue_search_icon
-{
-     width: 24px;
-     height: 24px;
+.tipue_search_icon {
+  width: 24px;
+  height: 24px;
 }
 
-.tipue_search_left
-{
-     float: left;
+.tipue_search_left {
+  float: left;
 
-     padding: 0.94rem 0.56rem 0 0;
+  padding: 0.94rem 0.56rem 0 0;
 }
 
-.tipue_search_right
-{
-     float: left;
+.tipue_search_right {
+  float: left;
 }
 
 /* search results */
 
-#tipue_search_content
-{
-     max-width: 750px;
+#tipue_search_content {
+  max-width: 750px;
   margin: 0;
   padding-top: 15px;
 }
 
-#tipue_search_results_count
-{
+#tipue_search_results_count {
   color: #333;
 }
 
-#tipue_search_warning
-{
+#tipue_search_warning {
   margin: 0.44rem 0;
 
-     color: #333;
+  color: #333;
 }
 
-#tipue_search_warning a
-{
-     text-decoration: none;
+#tipue_search_warning a {
+  text-decoration: none;
 
-     color: #5396ea;
+  color: #5396ea;
 }
 
-#tipue_search_warning a:hover
-{
-     color: #555;
+#tipue_search_warning a:hover {
+  color: #555;
 }
 
-.tipue_search_content_title
-{
+.tipue_search_content_title {
   margin-top: 21px;
 
-     color: #666;
+  color: #666;
 }
 
-.tipue_search_content_title a
-{
-     text-decoration: none;
+.tipue_search_content_title a {
+  text-decoration: none;
 
-     color: #666;
+  color: #666;
 }
 
-.tipue_search_content_title a:hover
-{
-     color: #666;
+.tipue_search_content_title a:hover {
+  color: #666;
 }
 
-.tipue_search_content_url
-{
-     word-wrap: break-word;
-     hyphens: auto;
+.tipue_search_content_url {
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
-.tipue_search_content_url a, .tipue_search_related_text a
-{
-     text-decoration: none;
+.tipue_search_content_url a,
+.tipue_search_related_text a {
+  text-decoration: none;
 
-     color: #5396ea;
+  color: #5396ea;
 }
 
-.tipue_search_content_url a:hover, .tipue_search_related_text a:hover, .tipue_search_related_before, .tipue_search_related_after
-{
-     color: #555;
+.tipue_search_content_url a:hover,
+.tipue_search_related_text a:hover,
+.tipue_search_related_before,
+.tipue_search_related_after {
+  color: #555;
 }
 
-.tipue_search_content_text
-{
-     margin-top: 5px;
+.tipue_search_content_text {
+  margin-top: 5px;
 
-     word-wrap: break-word;
-     hyphens: auto;
+  word-wrap: break-word;
+  hyphens: auto;
 
   color: #333;
 }
 
-.tipue_search_content_bold
-{
-     color: #333;
+.tipue_search_content_bold {
+  color: #333;
 }
 
-.tipue_search_content_debug
-{
-     margin: 0.31rem 0;
+.tipue_search_content_debug {
+  margin: 0.31rem 0;
 
   color: #333;
 }
 
-.tipue_search_related_title
-{
-     margin: 1.63rem 0 0.44rem 0;
+.tipue_search_related_title {
+  margin: 1.63rem 0 0.44rem 0;
 
   color: #333;
 }
 
-.tipue_search_related_cols
-{
-     -webkit-columns: 230px 2;
-     -moz-columns: 230px 2;
-     columns: 230px 2;
+.tipue_search_related_cols {
+  -webkit-columns: 230px 2;
+  -moz-columns: 230px 2;
+  columns: 230px 2;
 }
 
-#tipue_search_foot
-{
-     margin: 3.19rem 0 1.31rem 0;
+#tipue_search_foot {
+  margin: 3.19rem 0 1.31rem 0;
 }
 
-#tipue_search_foot_boxes
-{
+#tipue_search_foot_boxes {
   margin: 0;
   padding: 0;
 
   cursor: pointer;
 }
 
-#tipue_search_foot_boxes li
-{
+#tipue_search_foot_boxes li {
   display: inline;
 
   margin: 0;
@@ -622,8 +730,7 @@ http://www.tipue.com/search
   list-style: none;
 }
 
-#tipue_search_foot_boxes li a
-{
+#tipue_search_foot_boxes li a {
   margin-right: 7px;
   padding: 0.63rem 1.06rem 0.69rem 1.06rem;
 
@@ -631,27 +738,43 @@ http://www.tipue.com/search
   text-decoration: none;
 
   color: #333;
-     border: 1px solid #e3e3e3;
-     border-radius: 1px;
-     background-color: #fff;
+  border: 1px solid #e3e3e3;
+  border-radius: 1px;
+  background-color: #fff;
 }
 
-#tipue_search_foot_boxes li.current
-{
+#tipue_search_foot_boxes li.current {
   margin-right: 7px;
   padding: 0.63rem 1.06rem 0.69rem 1.06rem;
 
   text-align: center;
 
   color: #333;
-     border: 1px solid #e3e3e3;
-     border-radius: 1px;
-     background: #f6f6f6;
+  border: 1px solid #e3e3e3;
+  border-radius: 1px;
+  background: #f6f6f6;
 }
 
-#tipue_search_foot_boxes li a:hover
-{
-     background: #f6f6f6;
+#tipue_search_foot_boxes li a:hover {
+  background: #f6f6f6;
+}
+
+.btn-search {
+  width: 50px;
+  height: 53px;
+  margin-left: -6px;
+
+  cursor: pointer;
+
+  border: 1px solid #1B305F;
+}
+
+.btn-search:hover {
+  background-color: #1B305F;
+}
+
+.btn-search:hover path {
+  fill: #fff;
 }
 
 .btn-share {
@@ -745,8 +868,16 @@ http://www.tipue.com/search
   width: 100%;
 }
 
+.w-h-20 {
+  width: 20px;
+}
+
 .black {
   color: #121;
+}
+
+.transparent {
+  background-color: transparent;
 }
 
 .bgc-mint {
@@ -913,6 +1044,10 @@ http://www.tipue.com/search
 
 .vertical-am {
   vertical-align: middle;
+}
+
+.vertical-at {
+  vertical-align: top;
 }
 
 .font-w8 {
@@ -1087,6 +1222,10 @@ http://www.tipue.com/search
   height: 24rem;
 }
 
+.mih-custom {
+  min-height: calc(100vh - 290px);
+}
+
 .pos-r {
   position: relative;
 }
@@ -1105,6 +1244,10 @@ http://www.tipue.com/search
 
 .tp-0 {
   top: 0;
+}
+
+.tp-5p {
+  top: 5px;
 }
 
 .tp-1 {
@@ -1149,6 +1292,14 @@ http://www.tipue.com/search
 
 .rt-0 {
   right: 0;
+}
+
+.lf-0 {
+  left: 0;
+}
+
+.lf-5 {
+  left: 5px;
 }
 
 .fl-l {
