--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -27,24 +27,218 @@ body {
   text-decoration: none;
 }
 
+
 /* ESTILOS C3 */
+
+
 /* stylelint-disable */
-.c3 svg{font:10px sans-serif;-webkit-tap-highlight-color:transparent}.c3 line,.c3 path{fill:none;stroke:#000}.c3 text{-webkit-user-select:none;-moz-user-select:none;user-select:none}.c3-bars path,.c3-event-rect,.c3-legend-item-tile,.c3-xgrid-focus,.c3-ygrid{shape-rendering:crispEdges}.c3-chart-arc path{stroke:#fff}.c3-chart-arc text{fill:#fff;font-size:13px}.c3-grid line{stroke:#aaa}.c3-grid text{fill:#aaa}.c3-xgrid,.c3-ygrid{stroke-dasharray:3 3}.c3-text.c3-empty{fill:gray;font-size:2em}.c3-line{stroke-width:1px}.c3-circle._expanded_{stroke-width:1px;stroke:#fff}.c3-selected-circle{fill:#fff;stroke-width:2px}.c3-bar{stroke-width:0}.c3-bar._expanded_{fill-opacity:.75}.c3-target.c3-focused{opacity:1}.c3-target.c3-focused path.c3-line,.c3-target.c3-focused path.c3-step{stroke-width:2px}.c3-target.c3-defocused{opacity:.3!important}.c3-region{fill:#4682b4;fill-opacity:.1}.c3-brush .extent{fill-opacity:.1}.c3-legend-item{font-size:12px}.c3-legend-item-hidden{opacity:.15}.c3-legend-background{opacity:.75;fill:#fff;stroke:#d3d3d3;stroke-width:1}.c3-title{font:14px sans-serif}.c3-tooltip-container{z-index:10}.c3-tooltip{border-collapse:collapse;border-spacing:0;background-color:#fff;empty-cells:show;-webkit-box-shadow:7px 7px 12px -9px #777;-moz-box-shadow:7px 7px 12px -9px #777;box-shadow:7px 7px 12px -9px #777;opacity:.9}.c3-tooltip tr{border:1px solid #CCC}.c3-tooltip th{background-color:#aaa;font-size:14px;padding:2px 5px;text-align:left;color:#FFF}.c3-tooltip td{font-size:13px;padding:3px 6px;background-color:#fff;border-left:1px dotted #999}.c3-tooltip td>span{display:inline-block;width:10px;height:10px;margin-right:6px}.c3-tooltip td.value{text-align:right}.c3-area{stroke-width:0;opacity:.2}.c3-chart-arcs-title{dominant-baseline:middle;font-size:1.3em}.c3-chart-arcs .c3-chart-arcs-background{fill:#e0e0e0;stroke:none}.c3-chart-arcs .c3-chart-arcs-gauge-unit{fill:#000;font-size:16px}.c3-chart-arcs .c3-chart-arcs-gauge-max,.c3-chart-arcs .c3-chart-arcs-gauge-min{fill:#777}.c3-chart-arc .c3-gauge-value{fill:#000}
+
+.c3 svg {
+  font: 10px sans-serif;
+  -webkit-tap-highlight-color: transparent
+}
+
+.c3 line,
+.c3 path {
+  fill: none;
+  stroke: #000
+}
+
+.c3 text {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none
+}
+
+.c3-bars path,
+.c3-event-rect,
+.c3-legend-item-tile,
+.c3-xgrid-focus,
+.c3-ygrid {
+  shape-rendering: crispEdges
+}
+
+.c3-chart-arc path {
+  stroke: #fff
+}
+
+.c3-chart-arc text {
+  fill: #fff;
+  font-size: 13px
+}
+
+.c3-grid line {
+  stroke: #aaa
+}
+
+.c3-grid text {
+  fill: #aaa
+}
+
+.c3-xgrid,
+.c3-ygrid {
+  stroke-dasharray: 3 3
+}
+
+.c3-text.c3-empty {
+  fill: gray;
+  font-size: 2em
+}
+
+.c3-line {
+  stroke-width: 1px
+}
+
+.c3-circle._expanded_ {
+  stroke-width: 1px;
+  stroke: #fff
+}
+
+.c3-selected-circle {
+  fill: #fff;
+  stroke-width: 2px
+}
+
+.c3-bar {
+  stroke-width: 0
+}
+
+.c3-bar._expanded_ {
+  fill-opacity: .75
+}
+
+.c3-target.c3-focused {
+  opacity: 1
+}
+
+.c3-target.c3-focused path.c3-line,
+.c3-target.c3-focused path.c3-step {
+  stroke-width: 2px
+}
+
+.c3-target.c3-defocused {
+  opacity: .3!important
+}
+
+.c3-region {
+  fill: #4682b4;
+  fill-opacity: .1
+}
+
+.c3-brush .extent {
+  fill-opacity: .1
+}
+
+.c3-legend-item {
+  font-size: 12px
+}
+
+.c3-legend-item-hidden {
+  opacity: .15
+}
+
+.c3-legend-background {
+  opacity: .75;
+  fill: #fff;
+  stroke: #d3d3d3;
+  stroke-width: 1
+}
+
+.c3-title {
+  font: 14px sans-serif
+}
+
+.c3-tooltip-container {
+  z-index: 10
+}
+
+.c3-tooltip {
+  border-collapse: collapse;
+  border-spacing: 0;
+  background-color: #fff;
+  empty-cells: show;
+  -webkit-box-shadow: 7px 7px 12px -9px #777;
+  -moz-box-shadow: 7px 7px 12px -9px #777;
+  box-shadow: 7px 7px 12px -9px #777;
+  opacity: .9
+}
+
+.c3-tooltip tr {
+  border: 1px solid #CCC
+}
+
+.c3-tooltip th {
+  background-color: #aaa;
+  font-size: 14px;
+  padding: 2px 5px;
+  text-align: left;
+  color: #FFF
+}
+
+.c3-tooltip td {
+  font-size: 13px;
+  padding: 3px 6px;
+  background-color: #fff;
+  border-left: 1px dotted #999
+}
+
+.c3-tooltip td>span {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin-right: 6px
+}
+
+.c3-tooltip td.value {
+  text-align: right
+}
+
+.c3-area {
+  stroke-width: 0;
+  opacity: .2
+}
+
+.c3-chart-arcs-title {
+  dominant-baseline: middle;
+  font-size: 1.3em
+}
+
+.c3-chart-arcs .c3-chart-arcs-background {
+  fill: #e0e0e0;
+  stroke: none
+}
+
+.c3-chart-arcs .c3-chart-arcs-gauge-unit {
+  fill: #000;
+  font-size: 16px
+}
+
+.c3-chart-arcs .c3-chart-arcs-gauge-max,
+.c3-chart-arcs .c3-chart-arcs-gauge-min {
+  fill: #777
+}
+
+.c3-chart-arc .c3-gauge-value {
+  fill: #000
+}
+
+
 /* stylelint-enable */
+
 
 /* Machacando a fuego los estilos que incluye c3 */
 
 .c3-chart-arc text {
-    fill: #000 !important;
-    font-size: 16px !important;
-    font-weight: bold !important;
-    font-family: var(--fontSystem);
+  fill: #000 !important;
+  font-size: 16px !important;
+  font-weight: bold !important;
+  font-family: var(--fontSystem);
 }
 
 .c3 text {
-    font-size: 16px !important;
-    font-weight: bold !important;
-    font-family: var(--fontSystem);
+  font-size: 16px !important;
+  font-weight: bold !important;
+  font-family: var(--fontSystem);
 }
 
 canvas {
@@ -63,183 +257,195 @@ http://www.tipue.com/search
 
 /* fonts */
 
+#tipue_search_input,
+#tipue_search_foot_boxes,
+#tipue_search_results_count,
+#tipue_search_warning,
+.tipue_search_content_url,
+.tipue_search_content_debug,
+.tipue_search_related_text {
+  font-size: 14px;
+}
 
-#tipue_search_input, #tipue_search_foot_boxes
-{
-     font: 300 14px/1 Roboto, sans-serif;
+.tipue_search_content_title {
+  font-size: 26px;
 }
-#tipue_search_results_count, #tipue_search_warning, .tipue_search_content_url, .tipue_search_content_debug, .tipue_search_related_text
-{
-     font: 300 14px/1.7 Roboto, sans-serif;
+
+.tipue_search_content_text,
+.tipue_search_related_title {
+  font-size: 15px;
 }
-.tipue_search_content_title
-{
-     font: 100 26px/1.7 Roboto, sans-serif;
-}
-.tipue_search_content_text, .tipue_search_related_title
-{
-     font: 300 15px/1.7 Roboto, sans-serif;
-}
-.tipue_search_content_bold, .tipue_search_related_bold
-{
-     font-weight: 400;
+
+.tipue_search_content_bold,
+.tipue_search_related_bold {
+  font-weight: bold;
 }
 
 
 /* search box */
 
-
-#tipue_search_input
-{
-     color: #333;
-     max-width: 210px;
-  padding: 17px;
-  border: 1px solid #e3e3e3;
+#tipue_search_input {
+  color: #333;
+  border: 1px solid #1B305F;
   border-radius: 0;
+  padding: 17px;
   outline: 0;
   margin: 0;
   font-family: var(--fontSystem);
 }
-.tipue_search_icon
-{
-     width: 24px;
-     height: 24px;
+
+.tipue_search_icon {
+  width: 24px;
+  height: 24px;
 }
-.tipue_search_left
-{
-     float: left;
-     padding: 15px 9px 0 0;
+
+.tipue_search_left {
+  float: left;
+  padding: 15px 9px 0 0;
 }
-.tipue_search_right
-{
-     float: left;
+
+.tipue_search_right {
+  float: left;
 }
 
 
 /* search results */
 
-
-#tipue_search_content
-{
-     max-width: 750px;
+#tipue_search_content {
+  max-width: 750px;
   padding-top: 15px;
   margin: 0;
 }
-#tipue_search_results_count
-{
+
+#tipue_search_results_count {
   color: #333;
-}
-#tipue_search_warning
-{
-     color: #333;
-  margin: 7px 0;
-}
-#tipue_search_warning a
-{
-     color: #5396ea;
-     text-decoration: none;
-}
-#tipue_search_warning a:hover
-{
-     color: #555;
-}
-.tipue_search_content_title
-{
-     color: #666;
-  margin-top: 21px;
-}
-.tipue_search_content_title a
-{
-     color: #666;
-     text-decoration: none;
-}
-.tipue_search_content_title a:hover
-{
-     color: #666;
-}
-.tipue_search_content_url
-{
-     word-wrap: break-word;
-     hyphens: auto;
-}
-.tipue_search_content_url a, .tipue_search_related_text a
-{
-     color: #5396ea;
-     text-decoration: none;
-}
-.tipue_search_content_url a:hover, .tipue_search_related_text a:hover, .tipue_search_related_before, .tipue_search_related_after
-{
-     color: #555;
-}
-.tipue_search_content_text
-{
-  color: #333;
-     word-wrap: break-word;
-     hyphens: auto;
-     margin-top: 5px;
-}
-.tipue_search_content_bold
-{
-     color: #333;
-}
-.tipue_search_content_debug
-{
-  color: #333;
-     margin: 5px 0;
-}
-.tipue_search_related_title
-{
-  color: #333;
-     margin: 26px 0 7px 0;
-}
-.tipue_search_related_cols
-{
-     -webkit-columns: 230px 2;
-     -moz-columns: 230px 2;
-     columns: 230px 2;
 }
 
-#tipue_search_foot
-{
-     margin: 51px 0 21px 0;
+#tipue_search_warning {
+  color: #333;
+  margin: 7px 0;
 }
-#tipue_search_foot_boxes
-{
+
+#tipue_search_warning a {
+  color: #5396ea;
+  text-decoration: none;
+}
+
+#tipue_search_warning a:hover {
+  color: #555;
+}
+
+.tipue_search_content_title {
+  color: #666;
+  margin-top: 21px;
+}
+
+.tipue_search_content_title a {
+  color: #666;
+  text-decoration: none;
+}
+
+.tipue_search_content_title a:hover {
+  color: #666;
+}
+
+.tipue_search_content_url {
+  word-wrap: break-word;
+  hyphens: auto;
+}
+
+.tipue_search_content_url a,
+.tipue_search_related_text a {
+  color: #5396ea;
+  text-decoration: none;
+}
+
+.tipue_search_content_url a:hover,
+.tipue_search_related_text a:hover,
+.tipue_search_related_before,
+.tipue_search_related_after {
+  color: #555;
+}
+
+.tipue_search_content_text {
+  color: #333;
+  word-wrap: break-word;
+  hyphens: auto;
+  margin-top: 5px;
+}
+
+.tipue_search_content_bold {
+  color: #333;
+}
+
+.tipue_search_content_debug {
+  color: #333;
+  margin: 5px 0;
+}
+
+.tipue_search_related_title {
+  color: #333;
+  margin: 26px 0 7px 0;
+}
+
+.tipue_search_related_cols {
+  -webkit-columns: 230px 2;
+  -moz-columns: 230px 2;
+  columns: 230px 2;
+}
+
+#tipue_search_foot {
+  margin: 51px 0 21px 0;
+}
+
+#tipue_search_foot_boxes {
   padding: 0;
   margin: 0;
   cursor: pointer;
 }
-#tipue_search_foot_boxes li
-{
+
+#tipue_search_foot_boxes li {
   list-style: none;
   margin: 0;
   padding: 0;
   display: inline;
 }
-#tipue_search_foot_boxes li a
-{
+
+#tipue_search_foot_boxes li a {
   padding: 10px 17px 11px 17px;
-     background-color: #fff;
-     border: 1px solid #e3e3e3;
-     border-radius: 1px;
+  background-color: #fff;
+  border: 1px solid #e3e3e3;
+  border-radius: 1px;
   color: #333;
   margin-right: 7px;
   text-decoration: none;
   text-align: center;
 }
-#tipue_search_foot_boxes li.current
-{
+
+#tipue_search_foot_boxes li.current {
   padding: 10px 17px 11px 17px;
-     background: #f6f6f6;
-     border: 1px solid #e3e3e3;
-     border-radius: 1px;
+  background: #f6f6f6;
+  border: 1px solid #e3e3e3;
+  border-radius: 1px;
   color: #333;
   margin-right: 7px;
   text-align: center;
 }
-#tipue_search_foot_boxes li a:hover
-{
-     background: #f6f6f6;
+
+#tipue_search_foot_boxes li a:hover {
+  background: #f6f6f6;
 }
 
-
+.btn-search {
+  width: 50px;
+  height: 53px;
+  border: 1px solid #1B305F;
+  cursor: pointer;
+  margin-left: -6px;
+  &:hover {
+    background-color: #1B305F;
+    path {
+      fill: #fff;
+    }
+  }
+}
