--- a/src/css/_height.css
+++ b/src/css/_height.css
@@ -1,4 +1,3 @@
-
 .h-2 {
   height: 2rem;
 }
@@ -17,4 +16,8 @@
 
 .h-24 {
   height: 24rem;
+}
+
+.mih-custom {
+  min-height: calc(100vh - 290px);
 }
