--- a/css/styles.css
+++ b/css/styles.css
@@ -592,6 +592,7 @@ http://www.tipue.com/search
 #tipue_search_input {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
 
+  height: 60px;
   margin: 0;
   padding: 1.06rem;
 
@@ -732,7 +733,7 @@ http://www.tipue.com/search
 
 #tipue_search_foot_boxes li a {
   margin-right: 7px;
-  padding: 0.63rem 1.06rem 0.69rem 1.06rem;
+  padding: 0.63rem 1.06rem 0.69rem;
 
   text-align: center;
   text-decoration: none;
@@ -745,7 +746,7 @@ http://www.tipue.com/search
 
 #tipue_search_foot_boxes li.current {
   margin-right: 7px;
-  padding: 0.63rem 1.06rem 0.69rem 1.06rem;
+  padding: 0.63rem 1.06rem 0.69rem;
 
   text-align: center;
 
@@ -761,7 +762,7 @@ http://www.tipue.com/search
 
 .btn-search {
   width: 50px;
-  height: 53px;
+  height: 60px;
   margin-left: -6px;
 
   cursor: pointer;
