--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -23,4 +23,6 @@
     --nightRider: #431729;
     --frenchGrey: #E1DCE3;
     --bunting: #271764;
+    --celery: #A5CC5F;
+    --luckyPointer: #221E61;
 }
