--- a/css/styles.css
+++ b/css/styles.css
@@ -1247,6 +1247,14 @@ http://www.tipue.com/search
   min-height: calc(100vh - 290px);
 }
 
+.h-100p {
+  height: 100%;
+}
+
+.h-100vh {
+  height: 100vh;
+}
+
 .pos-r {
   position: relative;
 }
