--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -241,10 +241,10 @@ body {
   font-family: var(--fontSystem);
 }
 
-canvas {
+/*canvas {
   width: 400px !important;
   height: 400px !important;
-}
+}*/
 
 
 /*
