nuevas separaciones en estadisticas y cargando datos reales

--- a/css/styles.css
+++ b/css/styles.css
@@ -1119,6 +1119,14 @@ http://www.tipue.com/search
   padding-left: 0;
 }
 
+.padding-l-10p {
+  padding-left: 10%;
+}
+
+.padding-r-10p {
+  padding-right: 10%;
+}
+
 .border-b1 {
   border-bottom: 1px solid;
 }
