cambios en los CSS e iniciando los datos verdaderos en estadisticas

--- a/src/css/_padding.css
+++ b/src/css/_padding.css
@@ -46,6 +46,14 @@
   padding-left: 0;
 }
 
+.padding-l1 {
+  padding-left: 1rem;
+}
+
+.padding-l2 {
+  padding-left: 2rem;
+}
+
 .padding-l-10p {
   padding-left: 10%;
 }
