--- a/css/styles.css
+++ b/css/styles.css
@@ -881,6 +881,10 @@ http://www.tipue.com/search
   width: 20px;
 }
 
+.w-h-100px {
+  width: 100px;
+}
+
 .black {
   color: #121;
 }
@@ -1039,6 +1043,16 @@ http://www.tipue.com/search
   margin-bottom: 1rem;
 }
 
+.margin-y2 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.margin-y5 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 .margin-t1 {
   margin-top: 1rem;
 }
@@ -1117,6 +1131,14 @@ http://www.tipue.com/search
 
 .padding-l-n {
   padding-left: 0;
+}
+
+.padding-l1 {
+  padding-left: 1rem;
+}
+
+.padding-l2 {
+  padding-left: 2rem;
 }
 
 .padding-l-10p {
