--- a/src/css/_margin.css
+++ b/src/css/_margin.css
@@ -28,6 +28,16 @@
   margin-bottom: 1rem;
 }
 
+.margin-y2 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.margin-y5 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 .margin-t1 {
   margin-top: 1rem;
 }
